# python-learn

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  deps.py  images.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  image.py  user.py
app/schemas/: auth.py  image.py
app/services/: ocr.py  ocr_service.py
app/static/: app.js  styles.css
app/templates/: index.html
scripts/: create_worktree.sh
tests/: test_security.py
